test/good/conversions/ascii02.px

for i in 42..72 step 10 do
    print i.char
