test/bad/loops/for03.px

for i in true do
    skip
